feat: Updated build.gradle